--- a/projectC/secrets.py.template
+++ b/projectC/secrets.py.template
@@ -5,3 +5,6 @@
 # NOT actual production key.
 # Used for illustration purposes and automated tests
 SECRET_KEY = 'amw7_&9dwh&=1-2d2oodmbyayd0fdl&+8wnh&h$6r=-yn%6bez'
+
+
+GOOGLE_MAPS_API_KEY = 'AGFLKAIF87UDSH66373RFLCPZ-AD3'
